# WebX

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: rust.yml
conf/: config.toml  webx@.service
package-archlinux/: install.sh
package-debian/: postinst  postrm  prerm
package_archlinux/: install.sh
package_debian/: postinst
py-src/: cli.py
src/: cli.py  cli_socket.rs  loc.rs  logging_macros.rs  main.rs  p2p_network.rs  tun.rs  wallet.rs
