[package]
name = "webx"
description = "A Peer-to-Peer VPN service with internal IPv6 addresses and packet verification."
version = "0.1.0"
authors = ["Krzysztof Stefańczyk <krzysztof.stefanczyk@hxm4tech.tk>"]
license = "MIT"
edition = "2021"

[dependencies]
caps = "0.5.5"
chrono = { version = "0.4.26", features = [] }
chrono-tz = { version = "0.8.3", features = [] }
colored = "2.0.0"
generic-array = "0.14.7"
hex = "0.4.3"
k256 = "0.13.1"
kanal = "0.1.0-pre8"
lazy_static = "1.4.0"
rand_core = "0.6.4"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["net", "sync", "time", "macros", "io-util", "rt-multi-thread", "signal"] }
toml = "0.7.6"
tun-tap = "0.1.3"
users = { version = "0.11.0", features = [] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true

[package.metadata.deb]
maintainer-scripts = "package-debian/"
assets = [
    ["target/release/webx", "usr/bin/webxd", "755"],
    ["src/cli.py", "usr/bin/webx-cli", "755"],
    ["conf/config.toml", "etc/webx/config.toml", "644"],
    ["conf/webx@.service", "lib/systemd/system/webx@.service", "644"]
]
depends = "coreutils, systemd, python3, libcap2, findutils, iproute2"
section = "network"
